--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,9 @@ fieldset{
 
 .container{
     width: 120rem;
-    margin: 5rem auto 7rem;
+    margin: 7rem auto 7rem;
     background-color: var(--cont-bg);
-    /* border-radius: 2rem; */
+    border-radius: .2rem;
     
     box-shadow:
     1rem 1rem 1rem
@@ -134,9 +134,18 @@ fieldset{
 }
 
 .game-section--title{
-    padding: 6rem;
+    padding: 7rem;
     text-align: center;
     color: var(--text);
+}
+
+.popular .game-section--title::before{
+    display: inline-block;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f7e4";
+    padding-right: 2rem;
+    color: rgb(255, 136, 0);
 }
 
 .game-section{
@@ -147,7 +156,7 @@ fieldset{
     flex-wrap: wrap;
 
     gap: 2rem;
-    padding-bottom: 4rem;
+    padding-bottom: 7rem;
 }
 
 .game{
@@ -157,12 +166,16 @@ fieldset{
     box-shadow: 
     1rem 1rem 1rem
     rgba(0, 0, 0, .5);
+
+    transition: transform 300ms, box-shadow 300ms;
 }
 
 .game:hover{
     box-shadow: 
     1.4rem 1.4rem 1rem
     rgba(0, 0, 0, .8);
+
+    transform: scale(1.1);
 }
 .game .game-info:hover{
     color: rgb(255, 151, 0);
@@ -185,9 +198,6 @@ fieldset{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
-
-    /* background-color:rgb(43, 42, 51) ; */
 }
 
 .game-info p{
@@ -210,6 +220,63 @@ fieldset{
     margin: 5rem;
     font-size: 2rem;
 }
+
+
+/* Game Page */
+
+.game-main{
+    display: flex;
+    /* align-items: center; */
+    gap: 3rem;
+    padding: 0 3rem 7rem 3rem;
+}
+
+.game-buy h2{
+    text-align: center;
+    
+    padding: 7rem;
+    color: var(--text);
+    font-size: 6rem;
+}
+
+.game-image-main img{
+    min-width: 50rem;
+}
+
+.game-info-main{
+    padding: 0;
+    color: var(--text);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.game-info-main p{
+    font-size: 2.5rem;
+    margin: 0;
+    text-align: justify;
+}
+
+.buy-btn{
+    background-color: #8cbc00;
+    color: #ffff;
+    text-transform: uppercase;
+    display: block;
+    font-weight: 900;
+    padding: 1.5rem;
+    transition: background-color 300ms ease-out, transform 300ms;
+
+    text-align: center;
+    border: none;
+}
+
+.buy-btn:hover{
+    background-color: #769c02;
+    cursor: pointer;
+    transform: scale(1.06);
+}
+
 
 /* THEME SELECTOR */
 
