--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ fieldset{
 
     position: sticky;
     top: 0;
+    z-index: 9;
 
     border-top: .1rem solid #737373;
     border-bottom: .1rem solid #737373;
